[gd_scene load_steps=3 format=3 uid="uid://dljdgtp85rxq8"]

[ext_resource type="Script" path="res://Scenes/Components/selectable_line.gd" id="1_uolgb"]
[ext_resource type="Theme" uid="uid://d2otcyr4v4nk2" path="res://Themes/ItemListTheme.tres" id="2_5wkg3"]

[node name="SelectableLine" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
theme_override_constants/separation = 0
script = ExtResource("1_uolgb")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_5wkg3")

[node name="Col1" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="Col1Text" type="RichTextLabel" parent="Col1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[center][color=8D8D8D]Name"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Col2" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="Col2Text" type="RichTextLabel" parent="Col2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[center][color=8D8D8D]Name2"
fit_content = true
scroll_active = false
autowrap_mode = 0

[connection signal="pressed" from="VBoxContainer/CheckBox" to="." method="_on_check_box_pressed"]
